Fix image overflow in guide

--- a/source/stylesheets/_guide.css.scss
+++ b/source/stylesheets/_guide.css.scss
@@ -18,4 +18,15 @@
   p {
     text-align: justify;
   }
+  .list-thumbnail {
+    display: inline-block;
+    list-style: none;
+    .attribution {
+      display: inline-block;
+      font-size: 10px;
+      line-height: 14px;
+      text-align: right;
+      width: 100%;
+    }
+  }
 }
